--- a/app/templates/app/product/products/product-list.html
+++ b/app/templates/app/product/products/product-list.html
@@ -47,23 +47,27 @@
                     <div class="col-12 p-card">
                   <div class="row">
                     <div class="col-sm-5 col-md-4">
-                      {% for image in product.images.all %}  
+                      {% for image in product.images.all %}
+                          {% if forloop.first %}
                       <div class="position-relative h-sm-100"><a class="d-block h-100" href="{% url 'product_detail' product.slug %}"><img class="img-fluid fit-cover w-sm-100 h-sm-100 rounded-1 absolute-sm-centered" src="{{image.image.url}}" alt=""></a>
                          {% if product in recent_products %} 
                         <div class="badge rounded-pill bg-success position-absolute top-0 end-0 me-2 mt-2 fs--2 z-index-2">New</div>
                         {% endif %}
+                         {% endif %}
+                      {% endfor %}
                       </div>
                     </div>
-                {% endfor %}  
                     <div class="col-sm-7 col-md-8">
                       <div class="row">
                         <div class="col-lg-8">
                           <h5 class="mt-3 mt-sm-0"><a class="text-dark fs-0 fs-lg-1" href="{% url 'product_detail' product.slug %}">{{ product.name }}</a></h5>
                           <p class="fs--1 mb-2 mb-md-3"><a class="text-500" href="#!">Computer &amp; Accessories</a></p>
                           <ul class="list-unstyled d-none d-lg-block">
-                            {% for value in attribute_values %}  
-                                <li><svg class="svg-inline--fa fa-circle fa-w-16" data-fa-transform="shrink-12" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="" style="transform-origin: 0.5em 0.5em;"><g transform="translate(256 256)"><g transform="translate(0, 0)  scale(0.25, 0.25)  rotate(0 0 0)"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z" transform="translate(-256 -256)"></path></g></g></svg><span>{{ value }}</span></li>
-                            {% endfor %}    
+                            {% for attribute in product.attributes.all %}
+                                {% if forloop.counter <= 4 %}
+                                <li><svg class="svg-inline--fa fa-circle fa-w-16" data-fa-transform="shrink-12" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="" style="transform-origin: 0.5em 0.5em;"><g transform="translate(256 256)"><g transform="translate(0, 0)  scale(0.25, 0.25)  rotate(0 0 0)"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z" transform="translate(-256 -256)"></path></g></g></svg><span>{{attribute.attribute_value}}</span></li>
+                                {% endif %}
+                            {% endfor %}
                           </ul>        
                         </div>
                         <div class="col-lg-4 d-flex justify-content-between flex-column">
@@ -91,7 +95,7 @@
                                 </svg>
                                 <svg class="svg-inline--fa fa-star fa-w-18 text-300" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="star" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
                                     <path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"></path>
-                                </svg><span class="ms-1">({{ avg_rating }})</span>
+                                </svg><span class="ms-1">({{ product.avg_rating }})</span>
                             </div>
                             <div class="d-none d-lg-block">
                                  {% if product.stock is not True %}
